--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,12 +17,22 @@ body {
   color: $grayishBlue;
   font-family: "Public Sans", sans-serif;
   line-height: 1.3;
+
+  &.noscroll {
+    overflow: hidden;
+  }
 }
 
 a,
 a:visited,
 a:hover {
   text-decoration: none;
+}
+
+// Spacing
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 // Flexbox
