--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -18,9 +18,19 @@ body {
   font-family: "Public Sans", sans-serif;
   line-height: 1.3;
 
+  @include breakpoint-up(large) {
+    font-size: $font-md;
+  }
+
   &.noscroll {
     overflow: hidden;
   }
+}
+
+h1,
+h2,
+h3 {
+  margin-top: 0;
 }
 
 a,
@@ -31,8 +41,41 @@ a:hover {
 
 // Spacing
 .container {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  max-width: 69.375rem;
+  margin: 0 auto;
+
+  &--pall {
+    padding-top: 2.25rem;
+    padding-right: 1.5rem;
+    padding-bottom: 2.25rem;
+    padding-left: 1.5rem;
+  }
+
+  &--px {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+
+  &--py {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+  }
+
+  &--pt {
+    padding-top: 2.25rem;
+  }
+
+  &--pr {
+    padding-right: 1.5rem;
+  }
+
+  &--pb {
+    padding-bottom: 2.25rem;
+  }
+
+  &--pl {
+    padding-left: 1.5rem;
+  }
 }
 
 // Flexbox
@@ -54,10 +97,18 @@ a:hover {
 
 // Buttons
 .button {
+  display: inline-block;
   padding: 0.875rem 2.875rem;
   background: linear-gradient(to right, $limeGreen, $rightCyan);
+  color: $white;
   border-radius: 50px;
   cursor: pointer;
+  font-size: $font-sm;
+  transition: opacity 300ms ease-in-out;
+
+  &:hover {
+    opacity: 0.75;
+  }
 }
 
 // Visibility
