--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -27,10 +27,38 @@ body {
   }
 }
 
+// Texts
 h1,
 h2,
 h3 {
   margin-top: 0;
+  font-weight: 300;
+  line-height: 1.15;
+  color: $darkBlue;
+}
+
+h1 {
+  font-size: 2.31rem;
+  margin-bottom: 1.5rem;
+
+  @include breakpoint-up(large) {
+    font-size: $font-xlg;
+  }
+}
+
+h2 {
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+
+  @include breakpoint-up(large) {
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
+}
+
+p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
 }
 
 a,
@@ -45,10 +73,15 @@ a:hover {
   margin: 0 auto;
 
   &--pall {
-    padding-top: 2.25rem;
+    padding-top: 4.375rem;
     padding-right: 1.5rem;
-    padding-bottom: 2.25rem;
+    padding-bottom: 4.375rem;
     padding-left: 1.5rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
 
   &--px {
@@ -57,12 +90,21 @@ a:hover {
   }
 
   &--py {
-    padding-top: 2.25rem;
-    padding-bottom: 2.25rem;
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
 
   &--pt {
-    padding-top: 2.25rem;
+    padding-top: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+    }
   }
 
   &--pr {
@@ -70,7 +112,11 @@ a:hover {
   }
 
   &--pb {
-    padding-bottom: 2.25rem;
+    padding-bottom: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-bottom: 6rem;
+    }
   }
 
   &--pl {
