--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   background-color: $veryLightGray;
+  overflow-y: unset;
 
   .container {
     @include breakpoint-up(large) {
@@ -18,6 +19,7 @@
 
     @include breakpoint-up(medium) {
       min-height: 25rem;
+      background-position: center 70%;
     }
 
     @include breakpoint-up(large) {
@@ -25,28 +27,29 @@
       order: 2;
       height: 41rem;
       background-image: none;
-      //   background-image: url("/images/bg-intro-desktop.svg");
-      //   background-position: left center;
+      //background-image: url('/images/bg-intro-desktop.svg');
+      //background-position: left center;
     }
 
     &::before {
       @include breakpoint-up(large) {
         content: "";
         position: absolute;
+        height: 100%;
         background-image: url("/images/bg-intro-desktop.svg");
         background-repeat: no-repeat;
         background-position: center bottom;
         width: 150%;
         background-size: 122%;
-        background-position: 0 83%;
+        background-position: 0% 83%;
       }
     }
 
     &::after {
       content: "";
-      height: 100%;
-      width: 100%;
       position: absolute;
+      width: 100%;
+      height: 100%;
       background-image: url("/images/image-mockups.png");
       background-size: 93%;
       background-repeat: no-repeat;
@@ -54,13 +57,14 @@
 
       @include breakpoint-up(medium) {
         background-size: 52%;
-        background-position: center 60%;
       }
 
       @include breakpoint-up(large) {
-        height: 120%;
-        background-size: 95%;
-        left: 20;
+        width: 120%;
+        height: 122%;
+        background-size: 94%;
+        background-position: center 150%;
+        left: 22%;
       }
     }
   }
@@ -72,23 +76,6 @@
       flex: 2;
       order: 1;
       text-align: left;
-    }
-
-    h1 {
-      font-weight: 300;
-      font-size: 2.31rem;
-      line-height: 1.15;
-      color: $darkBlue;
-      margin-bottom: 1.5rem;
-
-      @include breakpoint-up(large) {
-        font-size: $font-xlg;
-      }
-    }
-
-    p {
-      line-height: 1.5;
-      margin-bottom: 2.25rem;
     }
   }
 }
