--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,6 +17,7 @@ body {
   color: $grayishBlue;
   font-family: "Public Sans", sans-serif;
   line-height: 1.3;
+  overflow-x: hidden;
 
   @include breakpoint-up(large) {
     font-size: $font-md;
